--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I'm web designer & front-end developer with 7 years of professional experience. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet interfaces. I also have skills in other fields like branding, icon design or web development.</p>
+					<p>I am a Web and Graphic Designer at the Institute of Knowledge and Muslim Students Association – West. I am currently pursuing a Bachelor’s degree in Computer Science at the California State Polytechnic University, Pomona and am looking to expand my minimal coding knowledge to help me further my career as an artist and computer scientist.</p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
