--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I am a Web and Graphic Designer at the Institute of Knowledge and Muslim Students Association – West. I am currently pursuing a Bachelor’s degree in Computer Science at the California State Polytechnic University, Pomona and am looking to expand my minimal coding knowledge to help me further my career as an artist and computer scientist.</p>
+					<p>I am a Web and Graphic Designer at the <a href="http://www.instituteofknowledge.com">Institute of Knowledge</a> and <a href="http://www.msawest.net">Muslim Students Association – West</a>. I am currently pursuing a Bachelor’s degree in Computer Science at the California State Polytechnic University, Pomona and am looking to expand my minimal coding knowledge to help me further my career as an artist and computer scientist.</p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
