--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 					<h5>EDUCATION</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Master of Web Design</t><br/>
-						St. Patrick University <br/>
-						<i>3 Years Course</i>
+					<p><t>Bachelors of Science</t><br/>
+						California State Polytechnic University, Pomona <br/>
+						<i>Computer Science</i>
 					</p>
 				</div>
 				<div class="col-lg-3">
